<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_rep_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository_name"
                android:textStyle="bold"
                android:textColor="#303F9F"
                />

            <TextView
                android:id="@+id/tv_rep_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repository_description"
                android:textSize="12sp"
                android:ellipsize="end"
                android:textColor="@color/cardview_dark_background"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/repository_fork_icon"
                    android:src="@drawable/ic_action_name"
                    android:tint="@android:color/holo_orange_dark" />

                <TextView
                    android:id="@+id/tv_fork_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:text="@string/repository_fork_number"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" android:layout_marginStart="4dp" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:contentDescription="@string/repository_star_icon"
                    android:src="@android:drawable/btn_star"
                    android:tint="@android:color/holo_orange_dark" android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/tv_star_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:text="@string/repository_star_number"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" android:layout_marginStart="4dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_profile"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:orientation="vertical"
            android:layout_marginEnd="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_rep_author"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:id="@+id/tv_rep_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/repository_username"
                android:singleLine="true"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:textSize="12sp"
                android:textColor="#303F9F"
                />

            <TextView
                android:id="@+id/tv_rep_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/repository_fullname"
                android:singleLine="true"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:textSize="12sp"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>