<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tv_pull_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pull_title"
            android:textStyle="bold"
            android:textColor="#303F9F"
            />

        <TextView
            android:id="@+id/tv_pull_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pull_body"
            android:textSize="12sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:textColor="@color/cardview_dark_background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_pull_author"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_round"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="vertical" android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/tv_pull_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repository_username"
                    android:textColor="#303F9F"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_pull_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository_fullname"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>